<resources>
    <string name="app_name">TripCalculator</string>
    <string name="next_trips">Prossimi Viaggi</string>
    <string name="past_trips">Cronologia</string>
    <string name="search_label">Cerca luogo</string>
    <string name="search_title">Ricerca</string>
    <string name="welcome_locations">Qui puoi controllare le singole località del tuo viaggio, prova ad aggiungere, cancellare o modificare!</string>
    <string name="start_trip">Inizia Viaggio</string>
    <string name="plan_trip">Pianifica Viaggio</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="latitude_n">Latitudine:\n%1$f</string>
    <string name="longitude_n">Longitudine:\n%1$f</string>
    <string name="settings">Impostazioni</string>
    <string name="add_location">Aggiungi località</string>
    <string name="add_start_point">Aggiungi partenza</string>
    <string name="trip_hint">Nome del viaggio</string>
    <string name="prev_location">Località precedente</string>
    <string name="next_location">Località successiva</string>
    <string name="add_reminder">Imposta Promemoria</string>
    <string name="set_previous">Imposta Precedente</string>
    <string name="locations_list_label">Lista delle Destinazioni</string>
    <string name="save_changes_title">Salva Modifiche</string>
    <string name="optimize_trip">Ottimizza</string>
    <string name="summary_label">Riepilogo Del Viaggio</string>
    <string name="add_photo">"Allega Foto"</string>
    <string name="mod_reminder">Imposta Promemoria</string>
    <string name="add_note">Imposta Nota</string>
    <string name="view_reminder">Visualizza Promemoria</string>
    <string name="details">Dettagli</string>
    <string name="end_trip_label">Termina Viaggio</string>
    <string name="show_details">Visualizza dettagli</string>
    <string name="show_notes">Note</string>
    <string name="show_reminder">Promemoria</string>
    <string name="show_images">Immagini</string>
    <string name="set_passed">Superato</string>
    <string name="locations_string">Località</string>
    <string name="diary_string">Diario</string>
    <string name="location_menu">Location Menu</string>
    <string name="close">Chiudi</string>
    <string name="start_location">Località di partenza</string>
    <string name="show_all_markers">Mostra tutti i marker</string>
    <string name="rotate_to_north">Ruota la mappa verso il nord</string>
    <string name="clear_all_markers">Rimuovi tutti i marker</string>
    <string name="summary_tab_label">Riepilogo</string>
    <string name="diary_tab_label">Diario</string>
    <string name="show_my_position">Mostra la mia posizione</string>
    <string name="check_my_position">Fornisci i permessi di localizzazione</string>
    <string name="enable_rotation">Abilita rotazione della mappa</string>
    <string name="disable_rotation">Disabilita rotazione della mappa</string>
    <string name="save_changes">Le modifiche sono state salvate.</string>
    <string name="add_photo_cd">Aggiungi Foto</string>
    <string name="set_clock">Imposta Orario</string>
    <string name="set_day">Imposta Data</string>
    <string name="save">Salva</string>
    <string name="plan_trip_not_title">Inizia il viaggio!</string>
    <string name="plan_trip_not_message">Hai pianificato di iniziare il viaggio %s ora.</string>
    <string name="no_diary_label">Non hai inserito nessun diario</string>
    <string name="new_trip">Nuovo Viaggio</string>
    <string name="plan_trip_title">Pianificazione</string>
    <string name="confirm">Conferma</string>
    <string name="discard">Annulla</string>
    <string name="optimize_message">Il tuo percorso è stato ottimizzato!</string>
    <string name="arrival_title">Sei arrivato a %s.</string>
    <string name="empty_reminder">Nessun promemoria impostato.</string>
    <string name="reminder_message">Ricordati di %s.</string>
    <string name="ticker_reminder">Sei arrivato alla destinazione %s. \n %s</string>
    <string name="add_label">Aggiungi</string>
    <string name="previous_message">La destinazione precedente è stata impostata.</string>
    <string name="reminder">Promemoria</string>
    <string name="cancel">Cancella</string>
    <string name="reminder_save_message">Il promemoria è stato salvato.</string>
    <string name="note_message">La nota è stata salvata.</string>
    <string name="reminder_cancel_message">Promemoria non aggiunto</string>
    <string name="note">Note</string>
    <string name="note_cancel_message">Nota non aggiunta</string>
    <string name="plan_cancel_message">Valore non impostato</string>
    <string name="location_name">Nome Località</string>
    <string name="edit_location_name">Modifica nome località</string>
    <string name="modify_location_name_canceled">Nome non modificato</string>
    <string name="location_out_order_message">Non hai superato la destinazione precedente!</string>
    <string name="location_passed">Località superata!</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="start_trip_label">Inizia</string>
    <string name="start_error">Per poter partire, il viaggio deve avere almeno 2 località.</string>
    <string name="dark_theme">Tema Scuro</string>
    <string name="language">Lingua</string>
    <string name="hour_format">Formato 24 ore</string>
    <string name="diary_hint">Scrivi il diario del tuo viaggio</string>
    <string name="version_error">La tua versione di Android non permette la pianificazione, ci dispiace.</string>
    <string name="delete_dialog_title">Sei sicuro di voler eliminare la destinazione?</string>
    <string name="yes">Sì</string>
    <string name="no">No</string>
    <string name="no_reminder_message">Promemoria assente!</string>
    <string name="no_connection">Connessione a internet assente!</string>
    <string name="permission_denied">Permessi negati!</string>
    <string name="permission_denied_message">La tua posizione non può essere visualizzata sulla mappa!  L\'arrivo dovrà essere indicato manualmente!  Per fornire i permessi cliccare sul simbolo del GPS sulla sua destra!</string>
    <string name="position_not_found">Impossibile ottenere la posizione</string>
    <string name="gps_title">GPS disattivato!</string>
    <string name="gps_message">Vuoi attivare il GPS?</string>
    <string name="alert">Attenzione</string>
    <string name="no_name_error">Il tuo viaggio non ha un nome, dagliene uno!</string>
    <string name="location_error">Il tuo viaggio non può iniziare se non inserisci almeno 2 località!</string>
    <string name="save_message">Stai per tornare indietro, vuoi salvare le modifiche al tuo viaggio?</string>
    <string name="internet_error">Impossibile utilizzare la mappa senza l\'accesso ad internet!</string>
    <string name="delete_trip_message">Sei sicuro di voler eliminare i viaggi selezionati?</string>
    <string name="delete_trips">Elimina Viaggi</string>
    <string name="no_internet">Connessione assente</string>
    <string name="previous_location">Località precedente</string>
    <string name="next_location_cd">Prossima località</string>
    <string name="start_date_label">Data d\'inizio: %s</string>
    <string name="end_date_label">Data di fine: %s</string>
    <string name="remove_plan">Cancella pianificazione</string>
    <string name="remove_plan_title">Cancella la pianificazione</string>
    <string name="remove_planning_message">Sei sicuro di voler rimuovere la pianificazione?</string>
    <string name="planning_removed">Pianificazione cancellata</string>
    <string name="restart_needed_title">Riavvio necessario</string>
    <string name="restart_needed_message">Necessario riavviare l\'applicativo per applicare le modifiche!</string>
    <string name="no_note_message">Nessuna nota presente!</string>
    <string name="images_shown_title">Immagini scattate</string>
    <string name="no_images_found">Nessuna immagine scattata per questa località</string>
    <string name="photo">Foto scattata</string>
    <string name="view_photo">Guarda Galleria</string>
    <string name="active_trip">Viaggio Attivo:</string>
    <string name="other_trips">Altri Viaggi:</string>
    <string name="active_trip_error">Il viaggio non può partire, perchè ne hai già uno attivo!</string>
    <string name="planned_trip_error">Il viaggio non può partire perchè ne hai già pianificato uno!</string>
    <string name="delete_past_trips">Sei sicuro di voler eliminare definitivamente tutti i viaggi passati?</string>
    <string name="delete">Cancella</string>
    <string name="none">Nessuno</string>
    <string name="previous_location_removed">Località precedente rimossa!</string>
    <string name="plan_message">Non puoi pianificare un viaggio per una data e un orario precedente ad adesso.</string>
    <string name="note_view_message">Qui puoi aggiungere una nota a questa località: per esempio scrivi cosa ti è piaciuto di più</string>
    <string name="reminder_view_message">Qui puoi aggiungere un promemoria che ti verrà ricordato quando raggiungerai la destinazione selezionata</string>
    <string name="edit_cd">Modifica nome località</string>
    <string name="insert">Imposta</string>
    <string name="double_location_message">Non è possibile reinserire una località già aggiunta in precedenza</string>
</resources>
