<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/settings">

        <SwitchPreferenceCompat
            app:title="@string/dark_theme"
            app:key="dark_theme"
            app:defaultValue="true" />

        <ListPreference
            app:title="@string/language"
            app:entries="@array/languages"
            app:entryValues="@array/languages_index"
            app:defaultValue="0"
            app:key="language"
            app:icon="@drawable/ic_language"
            app:summary="%s"/>

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="is24format"
            app:title="@string/hour_format" />

    </PreferenceCategory>

</PreferenceScreen>