<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bonuspack_bubble">

    <TextView
        android:id="@+id/active_trip_location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/active_trip_location_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude_n"
        app:layout_constraintEnd_toStartOf="@+id/active_trip_location_longitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/active_trip_location_title" />

    <TextView
        android:id="@+id/active_trip_location_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude_n"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/active_trip_location_latitude"
        app:layout_constraintTop_toBottomOf="@+id/active_trip_location_title" />

    <Button
        android:id="@+id/active_trip_location_passed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_passed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/active_trip_location_longitude" />

</androidx.constraintlayout.widget.ConstraintLayout>